# Cpprypto-madness

./: .gitignore  CMakeLists.txt  Makefile  README.md  idée.txt
client/: CMakeLists.txt
client/include/: canal_handler.hpp  client.hpp  message_handler.hpp  network.hpp  responseToServerStruct.hpp  secure_server_communicator.hpp  universal_structs_client.hpp  user_controller.h
client/include/ui/: auth_page.h  home_page.h  login_page.h  main_window.h
client/include/ui/page_type/: private_message_ui.h  room_ui.h
client/src/: canal_handler.cpp  client.cpp  main.cpp  message_handler.cpp  network.cpp  secure_server_communicator.cpp  user_controller.cpp
client/src/ui/: auth_page.cpp  home_page.cpp  login_page.cpp  main_window.cpp
client/src/ui/page_type/: private_message_ui.cpp  room_ui.cpp
key/: key.s
server/: CMakeLists.txt
server/include/: client_data.hpp  command.hpp  define.hpp  responseToClientStruct.hpp  rooms.hpp  secure_server_communicator.hpp  server.hpp  universal_structs_server.hpp  user_manager.hpp
server/src/: command.cpp  main.cpp  rooms.cpp  secure_server_communicator.cpp  server.cpp  user_manager.cpp
server/src/command/: auth.cpp  command.cpp  crea.cpp  deco.cpp  mess.cpp
server/src/opcode/: opcode.s
